# pydantic-config

./: .gitignore  LICENSE  README.md  contributing.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
pydantic_config/: loaders.py  main.py
src/pydantic_config/: __init__.py  main.py  merge.py  readers.py
tests/: conftest.py  test_loaders.py  test_settings_model.py
