[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-config"
description = "Support for Pydantic settings configuration file loading"
version = "0.1.0"
authors = [{name="Jordan Shaw"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Natural Language :: English',
    'Intended Audience :: Developers',
    'Development Status :: 4 - Beta',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pydantic==1.10.5',
    'pyyaml==6.0',
    'python-dotenv==0.21.0',
    'toml==0.10.2'
]

[project.optional-dependencies]
dev = [
    "pytest", 'twine', 'build'
]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/jordantshaw/pydantic-config"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
